# x30_motion_sdk

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README_ZH.md  main.cpp
example/: CMakeLists.txt  main.cpp  motion_example.cpp  motion_example.h  motion_sdk_example.cpp  motion_sdk_example.h
include/: base_socket.hpp  command.h  command_list.h  motion_example.h  parse_cmd.h  robot_types.h  send_to_robot.h  udp_server.hpp  udp_socket.hpp  x30_types.h
python/: CMakeLists.txt  motion_example.py  motion_sdk_example.py  motion_sdk_pybind.cpp  nerual_network_control.py
src/: command.cpp  command_list.cpp  motion_example.cpp  parse_cmd.cpp  send_to_robot.cpp
